wiki css:  minor alignment issue
git-svn-id: http://springrts.com/svn/spring/site/trunk@7353 37977431-3df6-0310-b722-df95706aa16b

--- a/wwwroot/skins/mediawiki/spring.css
+++ b/wwwroot/skins/mediawiki/spring.css
@@ -153,8 +153,9 @@ h4 .mw-headline:before   {content: '\25b8\25b8\25b8';}
 #article > p:first-child + p + p + p,
 #article > p:first-child + p + p + p + p {margin-left: 0px;}
 
+#article ul,
+#article ol              {margin-left: 5px;}
 #article hr              {margin-left: 0px;}
-#article ul              {margin-left: 0px;}
 #article table           {margin-left: 0px;}
 
 
